// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VButton Default render. Snapshot test 1`] = `
<div
  className="sc-AxjAm gDXVAl action_button "
  onClick={[Function]}
>
  Button test name
</div>
`;

exports[`VButton Rendering with props. Snapshot test 1`] = `
<div
  className="sc-AxjAm gDXVAl action_button some_classname"
  onClick={[Function]}
>
  Button test name
</div>
`;
